syntax = "proto3";

option csharp_namespace = "GrpcConnect";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHelloAsync (HelloRequest) returns (HelloReply);
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply);
  rpc SayHelloBiStream (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
